--- a/TyDtk/Base.lproj/Main.storyboard
+++ b/TyDtk/Base.lproj/Main.storyboard
@@ -80,16 +80,24 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="09W-V6-OVK">
-                        <barButtonItem key="leftBarButtonItem" title="定位" id="hUn-Tt-JBx">
-                            <color key="tintColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
-                            <connections>
-                                <action selector="cityBtnClick:" destination="BYZ-38-t0r" id="NT8-Lq-bYB"/>
-                            </connections>
+                        <barButtonItem key="leftBarButtonItem" id="jW4-SY-yqD">
+                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="Bxo-4i-iCx">
+                                <rect key="frame" x="16" y="13" width="56" height="18"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <inset key="imageEdgeInsets" minX="-5" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                <state key="normal" title="定位" image="ic_business_detail_mark">
+                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="cityBtnClick:" destination="BYZ-38-t0r" eventType="touchUpInside" id="hgR-zE-5RU"/>
+                                </connections>
+                            </button>
                         </barButtonItem>
                     </navigationItem>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                     <connections>
-                        <outlet property="buttonLeftItem" destination="hUn-Tt-JBx" id="wr3-g5-v51"/>
+                        <outlet property="buttonLeftItem" destination="Bxo-4i-iCx" id="dw9-eN-BEE"/>
                         <outlet property="imageBackGround" destination="h1h-kO-iAg" id="kdC-G4-0W0"/>
                         <outlet property="myCollectionView" destination="7gq-ri-kPM" id="U2i-kB-Z8n"/>
                         <segue destination="UmU-zd-yQ8" kind="show" identifier="location" id="HMd-92-cfQ"/>
@@ -305,13 +313,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="TVl-Gl-dTg">
-                                <rect key="frame" x="0.0" y="64" width="375" height="50"/>
-                                <color key="backgroundColor" red="0.77091916360000001" green="0.84952596749999998" blue="0.9031413613" alpha="1" colorSpace="calibratedRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="50" id="VMe-fN-Xyi"/>
-                                </constraints>
-                            </scrollView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vDX-u9-JlD">
                                 <rect key="frame" x="0.0" y="617" width="375" height="50"/>
                                 <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
@@ -319,25 +320,32 @@
                                     <constraint firstAttribute="height" constant="50" id="B6w-Th-xnJ"/>
                                 </constraints>
                             </view>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XsD-wx-pfy">
-                                <rect key="frame" x="95" y="295" width="185" height="35"/>
-                                <state key="normal" title="授权并获取令牌"/>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="UyW-We-WnH">
+                                <rect key="frame" x="0.0" y="64" width="375" height="50"/>
+                                <color key="backgroundColor" red="0.77091916360000001" green="0.84952596749999998" blue="0.9031413613" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="O9y-ua-9NX"/>
+                                </constraints>
                                 <connections>
-                                    <action selector="buttonClick:" destination="Fee-mn-zWi" eventType="touchUpInside" id="xc7-LQ-YE6"/>
+                                    <outlet property="delegate" destination="Fee-mn-zWi" id="7Jo-ar-DnF"/>
                                 </connections>
-                            </button>
+                            </scrollView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="5xN-PX-IXf" firstAttribute="top" secondItem="vDX-u9-JlD" secondAttribute="bottom" id="6Ae-kr-Hyp"/>
                             <constraint firstItem="vDX-u9-JlD" firstAttribute="leading" secondItem="8AC-B0-WdF" secondAttribute="leading" id="GvM-Z4-QTn"/>
+                            <constraint firstItem="UyW-We-WnH" firstAttribute="leading" secondItem="8AC-B0-WdF" secondAttribute="leading" id="TqD-W0-zcx"/>
                             <constraint firstAttribute="trailing" secondItem="vDX-u9-JlD" secondAttribute="trailing" id="bO9-zE-iGI"/>
-                            <constraint firstItem="TVl-Gl-dTg" firstAttribute="top" secondItem="fv5-kC-kBV" secondAttribute="bottom" id="hM2-s4-jAb"/>
-                            <constraint firstAttribute="trailing" secondItem="TVl-Gl-dTg" secondAttribute="trailing" id="huK-Vp-ajN"/>
-                            <constraint firstItem="TVl-Gl-dTg" firstAttribute="leading" secondItem="8AC-B0-WdF" secondAttribute="leading" id="smb-bY-HAz"/>
+                            <constraint firstAttribute="trailing" secondItem="UyW-We-WnH" secondAttribute="trailing" id="dWO-uH-GGi"/>
+                            <constraint firstItem="UyW-We-WnH" firstAttribute="top" secondItem="fv5-kC-kBV" secondAttribute="bottom" id="mkZ-qV-Rsj"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="vhZ-mT-hoR"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+                    <connections>
+                        <outlet property="ScrolHeardView" destination="UyW-We-WnH" id="JTT-uk-xQJ"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bSL-Ul-io5" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -1214,6 +1222,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="ic_business_detail_mark" width="10" height="10"/>
         <image name="km_icon.png" width="12" height="14"/>
         <image name="loginBrg.jpeg" width="700" height="1308"/>
         <image name="login_password.png" width="42" height="42"/>
