--- a/TyDtk/Base.lproj/Main.storyboard
+++ b/TyDtk/Base.lproj/Main.storyboard
@@ -313,15 +313,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vDX-u9-JlD">
-                                <rect key="frame" x="0.0" y="617" width="375" height="50"/>
-                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="50" id="B6w-Th-xnJ"/>
-                                </constraints>
-                            </view>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="UyW-We-WnH">
-                                <rect key="frame" x="0.0" y="64" width="375" height="50"/>
+                                <rect key="frame" x="0.0" y="617" width="375" height="50"/>
                                 <color key="backgroundColor" red="0.77091916360000001" green="0.84952596749999998" blue="0.9031413613" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="O9y-ua-9NX"/>
@@ -330,21 +323,66 @@
                                     <outlet property="delegate" destination="Fee-mn-zWi" id="7Jo-ar-DnF"/>
                                 </connections>
                             </scrollView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="j07-cK-Xme">
+                                <rect key="frame" x="95" y="469" width="151" height="46"/>
+                                <state key="normal" title="Button"/>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="5xN-PX-IXf" firstAttribute="top" secondItem="vDX-u9-JlD" secondAttribute="bottom" id="6Ae-kr-Hyp"/>
-                            <constraint firstItem="vDX-u9-JlD" firstAttribute="leading" secondItem="8AC-B0-WdF" secondAttribute="leading" id="GvM-Z4-QTn"/>
                             <constraint firstItem="UyW-We-WnH" firstAttribute="leading" secondItem="8AC-B0-WdF" secondAttribute="leading" id="TqD-W0-zcx"/>
-                            <constraint firstAttribute="trailing" secondItem="vDX-u9-JlD" secondAttribute="trailing" id="bO9-zE-iGI"/>
                             <constraint firstAttribute="trailing" secondItem="UyW-We-WnH" secondAttribute="trailing" id="dWO-uH-GGi"/>
-                            <constraint firstItem="UyW-We-WnH" firstAttribute="top" secondItem="fv5-kC-kBV" secondAttribute="bottom" id="mkZ-qV-Rsj"/>
+                            <constraint firstItem="UyW-We-WnH" firstAttribute="top" secondItem="fv5-kC-kBV" secondAttribute="bottom" constant="553" id="mkZ-qV-Rsj"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="vhZ-mT-hoR"/>
+                    <navigationItem key="navigationItem" id="vhZ-mT-hoR">
+                        <nil key="title"/>
+                        <barButtonItem key="leftBarButtonItem" systemItem="reply" id="MIb-c5-ypw">
+                            <connections>
+                                <action selector="leftButtonClick:" destination="Fee-mn-zWi" id="gmu-PT-1nm"/>
+                            </connections>
+                        </barButtonItem>
+                        <view key="titleView" contentMode="scaleToFill" id="c23-Ou-32H">
+                            <rect key="frame" x="92" y="6" width="192" height="33"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <subviews>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="j0j-lI-SWJ">
+                                    <rect key="frame" x="66" y="2" width="60" height="30"/>
+                                    <constraints>
+                                        <constraint firstAttribute="width" constant="60" id="8wl-oa-3X9"/>
+                                        <constraint firstAttribute="height" constant="30" id="rKH-pr-ThJ"/>
+                                    </constraints>
+                                    <state key="normal" title="Button">
+                                        <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                    </state>
+                                    <connections>
+                                        <action selector="heardButtonClick:" destination="Fee-mn-zWi" eventType="touchUpInside" id="q3m-X5-vkA"/>
+                                    </connections>
+                                </button>
+                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="arrow_down" translatesAutoresizingMaskIntoConstraints="NO" id="vbU-oe-jTV">
+                                    <rect key="frame" x="131" y="13" width="15" height="8"/>
+                                    <constraints>
+                                        <constraint firstAttribute="width" constant="15" id="bwU-zZ-gy4"/>
+                                        <constraint firstAttribute="height" constant="8" id="gaE-yH-mmN"/>
+                                    </constraints>
+                                </imageView>
+                            </subviews>
+                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                            <constraints>
+                                <constraint firstItem="j0j-lI-SWJ" firstAttribute="centerX" secondItem="c23-Ou-32H" secondAttribute="centerX" id="GJ1-xp-tJF"/>
+                                <constraint firstItem="vbU-oe-jTV" firstAttribute="centerY" secondItem="c23-Ou-32H" secondAttribute="centerY" id="Kww-WX-EeG"/>
+                                <constraint firstItem="j0j-lI-SWJ" firstAttribute="centerY" secondItem="c23-Ou-32H" secondAttribute="centerY" id="jCD-UR-Gze"/>
+                                <constraint firstItem="vbU-oe-jTV" firstAttribute="leading" secondItem="j0j-lI-SWJ" secondAttribute="trailing" constant="5" id="vty-wb-fVw"/>
+                            </constraints>
+                        </view>
+                    </navigationItem>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                     <connections>
                         <outlet property="ScrolHeardView" destination="UyW-We-WnH" id="JTT-uk-xQJ"/>
+                        <outlet property="buttonHeard" destination="j0j-lI-SWJ" id="54c-Fy-sQe"/>
+                        <outlet property="buttonLayoutWidth" destination="8wl-oa-3X9" id="jWQ-y0-V9D"/>
+                        <outlet property="imageViewHeard" destination="vbU-oe-jTV" id="FhF-Ds-yWQ"/>
+                        <outlet property="viewNaviTitle" destination="c23-Ou-32H" id="1ji-fx-YYF"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bSL-Ul-io5" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -1222,6 +1260,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="arrow_down" width="18" height="10"/>
         <image name="ic_business_detail_mark" width="10" height="10"/>
         <image name="km_icon.png" width="12" height="14"/>
         <image name="loginBrg.jpeg" width="700" height="1308"/>
